--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,13 +47,14 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          dotnet tool install --global dotnet-sonarscanner
+          dotnet tool install dotnet-sonarscanner --global
+          dotnet tool install coverlet.console --global
           dotnet-sonarscanner begin `
           /key:proj00_dfs /o:proj00 `
           /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
           /d:sonar.coverage.exclusions="dfs/common/generated/**/*,dfs/common/generated/*" `
           /d:typescript.lcov.reportPaths=coverage/jest/lcov.info `
-          /d:sonar.cs.opencover.reportsPaths="dfs/integration-tests/coverage.opencover.xml,dfs/unit-tests/coverage.opencover.xml" `
+          /d:sonar.cs.opencover.reportsPaths="dfs/integration-tests/*coverage.opencover.xml,dfs/integration-tests/**/*coverage.opencover.xml,dfs/unit-tests/coverage.opencover.xml" `
           /d:sonar.verbose=true
 
       - name: Build .NET project
