--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dfs/node/db
 .sonarqube
 *.local
 *coverage.xml
+*coverage.opencover.xml
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
