--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="robocopy /E /XO &quot;..\node\bin\Debug\net9.0-windows7.0&quot; &quot;..\node\bin\Debug\2-net9.0-windows7.0&quot; || IF %25ERRORLEVEL%25 GEQ 8 EXIT /B %25ERRORLEVEL%25&quot;" />
+    <Exec Command="cmd /c &quot;robocopy /E /XO ..\node\bin\Debug\net9.0-windows7.0 ..\node\bin\Debug\2-net9.0-windows7.0 || IF %25ERRORLEVEL%25 GEQ 8 EXIT /B %25ERRORLEVEL%25&quot;" />
   </Target>
 
 </Project>
