--- a/dfs/tracker/tracker.csproj
+++ b/dfs/tracker/tracker.csproj
@@ -22,7 +22,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
+	<ItemGroup>
+		<Using Remove="System.IO" />
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
   </ItemGroup>
