--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -38,7 +38,8 @@
     "@electron/fuses": "^1.8.0",
     "@protobuf-ts/plugin": "^2.9.6",
     "@protobuf-ts/protoc": "^2.9.6",
-    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
