--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -17,6 +17,7 @@
 		<Exec Command="taskkill /F /IM tracker.exe 2&gt;nul || exit 0" />
 	</Target>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
