--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,13 +48,12 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet tool install dotnet-sonarscanner --global
-          dotnet tool install coverlet.console --global
           dotnet-sonarscanner begin `
           /key:proj00_dfs /o:proj00 `
           /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
           /d:sonar.coverage.exclusions="dfs/common/generated/**/*,dfs/common/generated/*" `
           /d:typescript.lcov.reportPaths=coverage/jest/lcov.info `
-          /d:sonar.cs.opencover.reportsPaths="dfs/node-unit-tests/**/*coverage.opencover.xml" `
+          /d:sonar.cs.opencover.reportsPaths="dfs/**/*.cobertura.xml" `
           /d:sonar.verbose=true
 
       - name: Build .NET project
