--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,14 +53,14 @@ jobs:
           /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
           /d:sonar.coverage.exclusions="dfs/common/generated/**/*,dfs/common/generated/*" `
           /d:typescript.lcov.reportPaths=coverage/jest/lcov.info `
-          /d:sonar.cs.opencover.reportsPaths="dfs/**/*.cobertura.xml" `
+          /d:sonar.cs.cobertura.reportsPaths="dfs/**/*.cobertura.xml" `
           /d:sonar.verbose=true
 
       - name: Build .NET project
         run: dotnet build --no-restore dfs/dfs.sln
 
       - name: Test .NET project
-        run: dotnet test --no-build dfs/dfs.sln --verbosity d /p:ParallelizeTestCollections=false /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage.opencover.xml
+        run: dotnet test --no-build dfs/dfs.sln --collect:"Code Coverage;Format=cobertura" --verbosity d /p:ParallelizeTestCollections=false
 
       - name: Finish SonarScanner
         env:
