--- a/dfs/electron/tsconfig.json
+++ b/dfs/electron/tsconfig.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["node", "jest", "@testing-library/jest-dom"],
   },
-  "include": ["src", "index.ts"]
+  "include": ["src", "index.ts", "jest.config.ts", "src/setupTests.ts"]
 }
