--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -119,8 +119,7 @@ jobs:
         with:
           node-version: "22.x"
           cache: 'npm'
-          cache-dependency-path: |
-            '**/package-lock.json'
+          cache-dependency-path: ./dfs/electron/package.json
   
       - name: Install dependencies using npm ci
         working-directory: ./dfs/electron
