--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Test .NET project
         run: |
           dotnet-coverage collect "dotnet test --no-build dfs/node-unit-tests/unit-tests.csproj --verbosity d /p:ParallelizeTestCollections=false" -f xml -o "unitcoverage.xml"
-          #dotnet-coverage collect "dotnet test --no-build dfs/integration-tests/integration-tests.csproj --verbosity d /p:ParallelizeTestCollections=false" -f xml -o "bigcoverage.xml"
+          dotnet-coverage collect "dotnet test --no-build dfs/integration-tests/integration-tests.csproj --verbosity d /p:ParallelizeTestCollections=false" -f xml -o "bigcoverage.xml"
 
       - name: Finish SonarScanner
         env:
